Create links between pages
Added links to each recipe on the homepage and links to return to the
homepage on each recipe page.

--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 
     <body>
         <h1>Odin Recipes</h1>
+        <ol>
+            <li> <a href="recipes/apple-pie.html">Apple Pie</a> </li>
+            <li> <a href="recipes/cinnamon-rolls.html">Cinnamon Rolls</a> </li>
+            <li> <a href="recipes/lemon-tart.html">Lemon Tart</a> </li>
+        </ol>
     </body>
 </html>
