--- a/recipes/cinnamon-rolls.html
+++ b/recipes/cinnamon-rolls.html
@@ -7,5 +7,7 @@
 
     <body>
         <h1>Cinnamon Rolls</h1>
+
+        <p> <a href="../index.html">Back to Homepage</a> </p>
     </body>
 </html>
