Add photos to recipe pages

--- a/recipes/apple-pie.html
+++ b/recipes/apple-pie.html
@@ -7,7 +7,8 @@
     
     <body>
         <h1>Apple Pie</h1>
-
+        <img src="https://3.bp.blogspot.com/-sRHsQSCKyWM/WLXZx4TN2uI/AAAAAAAADsQ/VrHTghkBsbIOQxt_4entA7o1lI7wsA08QCLcB/s1600/Apple%2BPie%2BBy%2BGrandma%2BOple%2B4.jpg" 
+        width="500" alt="Slice of apple pie">
         <p> <a href="../index.html">Back to Homepage</a> </p>
     </body>
 </html>
