Ackowledge original recipes
Added short description of site on homepage and links to original recipes.

--- a/index.html
+++ b/index.html
@@ -7,10 +7,21 @@
 
     <body>
         <h1>Odin Recipes</h1>
+        <p>This is a test website made while following The Odin Project.
+            None of these recipes are mine, but I can recommend them all,
+            especially the lemon tart!
+        </p>
+        <h2>Recipe Recreations:</h2>
         <ol>
             <li> <a href="recipes/apple-pie.html">Apple Pie</a> </li>
             <li> <a href="recipes/cinnamon-rolls.html">Cinnamon Rolls</a> </li>
             <li> <a href="recipes/lemon-tart.html">Lemon Tart</a> </li>
         </ol>
+        <h2>Original Recipes</h2>
+        <ul>
+            <li> <a href="https://www.allrecipes.com/recipe/12682/apple-pie-by-grandma-ople/">Gradma Ople's Apple Pie</a> </li>
+            <li> <a href="https://bromabakery.com/gluten-free-vegan-cinnamon-rolls/">Gluten Free Vegan Cinnamon Rolls</a> </li>
+            <li> <a href="https://prettysimplesweet.com/lemon-tart/">Lemon Tart</a> </li>
+        </ul>
     </body>
 </html>
