--- a/recipes/apple-pie.html
+++ b/recipes/apple-pie.html
@@ -9,6 +9,31 @@
         <h1>Apple Pie</h1>
         <img src="https://3.bp.blogspot.com/-sRHsQSCKyWM/WLXZx4TN2uI/AAAAAAAADsQ/VrHTghkBsbIOQxt_4entA7o1lI7wsA08QCLcB/s1600/Apple%2BPie%2BBy%2BGrandma%2BOple%2B4.jpg" 
         width="500" alt="Slice of apple pie">
+        <p>This was my grandmother's apple pie recipe. I have never seen another one quite like it. It will always be my favorite and 
+            has won me several first place prizes in local competitions. I hope it becomes one of your favorites as well!</p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>1 recipe pastry for a 9 inch double crust pie</li>
+            <li>1/2 cup unsalted butter</li>
+            <li>3 tablespoons all-purpose flour</li>
+            <li>1/4 cup water</li>
+            <li>1/2 cup white sugar</li>
+            <li>1/2 cup packed brown sugar</li>
+            <li>8 Granny Smith apples - peeled, cored, and sliced</li>
+        </ul>
+        <h2>Directions</h2>
+        <ol>
+            <li>Preheat oven to 425 degrees F (220 degrees C)</li>
+            <li>Make a roux with butter and flour, add white and brown sugar,
+                and bring to a boil. Reduce temperature and let simmer.</li>
+            <li>Place the bottom crust in your pan and fill with apples, mounded 
+                slightly. Cover with lattice work crust.</li>
+            <li>Gently pour the sugar and butter liquid over the crust. Pour 
+                slowly so that it does not run off.</li>
+            <li>Bake 15 minutes in preheated oven, then reduce the temperature
+                to 350 degrees F (175 degrees C). Continue baking for 35 to 45
+                minutes, until apples are soft.</li>
+        </ol>
         <p> <a href="../index.html">Back to Homepage</a> </p>
     </body>
 </html>
