Remove paragraph tags from homepage links
Removed redundant paragraph tags from Back to Homepage links.

--- a/recipes/apple-pie.html
+++ b/recipes/apple-pie.html
@@ -34,6 +34,6 @@
                 to 350 degrees F (175 degrees C). Continue baking for 35 to 45
                 minutes, until apples are soft.</li>
         </ol>
-        <p> <a href="../index.html">Back to Homepage</a> </p>
+        <a href="../index.html">Back to Homepage</a>
     </body>
 </html>
