--- a/recipes/cinnamon-rolls.html
+++ b/recipes/cinnamon-rolls.html
@@ -80,6 +80,6 @@
                 it out slightly, then spread over the warm cinnamon rolls 
                 and serve!</li>
         </ol>
-        <p><a href="../index.html">Back to Homepage</a></p>
+        <a href="../index.html">Back to Homepage</a>
     </body>
 </html>
